# text-to-sql-lite

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  workflow.yaml
configs/: dialect_patterns.yaml  examples.yaml  knowledge.yaml
configs/prompts/: fix_sql.yaml  generate_sql.yaml
docs/: API参考.md  README.md  SQL生成过程代码追踪.md  完成度分析.md  数据库与方言扩展.md  整体架构.md  文本转SQL工作流.md  文档维护规范.md  日志与可观测性.md  日志系统设计.md  知识库与配置维护.md  节点扩展开发.md  记忆架构与模块设计.md  运行时数据库与模型路由配置方案.md  运行时配置.md  运行时配置实施计划.md  面试演示场景.md  项目结构与模块职责.md
docs/superpowers/specs/: 2026-06-23-logging-observability-design.md
examples/: minimal_workflow.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/adapters/: queryRunAdapter.test.ts  queryRunAdapter.ts
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: AppHeader.tsx  ErrorMessage.tsx  GenerationDetails.tsx  QueryInput.tsx  QueryResult.tsx  (+2 more)
scripts/: init_db.py  run_demo.py
src/text_to_sql_demo/: __init__.py  exceptions.py  main.py
tests/integration/: test_api_workflow.py  test_cli_commands.py  test_database_initialization.py  test_demo_scenarios.py  test_metadata_api.py  test_observability_api.py  test_observability_service.py  test_observability_workflow.py  test_runtime_config_api.py  test_sql_repair_workflow.py  test_strategy_reflection_workflow.py
tests/unit/: test_app_health.py  test_config_loader.py  test_database_connection_resolution.py  test_project_exceptions.py  test_serialize_run_reflection.py
(+118 files in other folders)
