[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-sql-demo"
version = "0.1.0"
description = "Interview-grade Text-to-SQL Agent demo scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "PyYAML>=6",
  "SQLAlchemy>=2",
  "sqlglot>=25",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
db = [
  "psycopg[binary]>=3",
  "PyMySQL>=1",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
text-to-sql-init-db = "text_to_sql_demo.db.init_db:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
